# rememex

./: .rcignore  AGENT.md  BEST_PRACTICES.md  CONFIG.md  CONTRIBUTING.md  MCP.md  README.md  ROADMAP.md  config.schema.json  index.html  package-lock.json  package.json  tsconfig.json
.agent/workflows/: rememex.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  Modal.css  i18n.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  check_err3.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  i18n.rs  indexer.rs  lib.rs  main.rs  state.rs  watcher.rs
src-tauri/src/indexer/: annotations.rs  chunking.rs  db.rs  embedding.rs  embedding_provider.rs  file_io.rs  git.rs  hyde.rs  mod.rs  ocr.rs  pipeline.rs  query_router.rs  search.rs
src-tauri/src/ui/: mod.rs  modal.rs  results_list.rs  search_bar.rs  settings_panel.rs  status_bar.rs  style.rs
src/components/: ResultsList.tsx  SearchBar.tsx  Settings.css  Settings.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
src/components/settings/: GeneralSettings.css  GeneralSettings.tsx  IndexingSettings.css  IndexingSettings.tsx  ProviderSettings.css  ProviderSettings.tsx  SearchSettings.css  SearchSettings.tsx  SettingsRow.css  SettingsRow.tsx
src/locales/: en.json  tr.json
