[package]
name = "recall-lite"
version = "1.4.3"
description = "Local semantic file search"
authors = ["machinetherapist"]
edition = "2021"

[lib]
name = "recall_lite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "recall-mcp"
path = "src/bin/mcp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
lancedb = "0.26"
arrow-array = "57"
arrow-schema = "57"
fastembed = "5"
pdf-extract = "0.10"
walkdir = "2"
regex = "1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
anyhow = "1"
rayon = "1.10"
kamadak-exif = "0.5"
reverse_geocoder = "4"
chrono = "0.4"
mimalloc = { version = "0.1", default-features = false }
tauri-plugin-global-shortcut = "2"
window-vibrancy = "0.7.1"
rmcp = { version = "0.15", features = ["server", "transport-io", "schemars"] }
schemars = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage",
    "Storage_Streams",
    "Globalization",
] }
tauri-plugin-opener = "2.5.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
